src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
   spec:
    containers:
      - env:
          - name: JAVA_OPTIONS
            value: '-Dspring.profiles.active=openshift'
        ports:
         - containerPort: 8888
           protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 20
          timeoutSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 120
          timeoutSeconds: 10
