src/main/fabric8/service.yml
apiVersion: v1
kind: Service

spec:
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
